added padding to p.success and p.errors

--- a/css/main.css
+++ b/css/main.css
@@ -27,4 +27,7 @@ button {
   background-color: #5c1020;
   color: white; }
 
+.errors p, .success p {
+  padding: 15px; }
+
 /*# sourceMappingURL=main.css.map */
