change background to eggshell

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 body {
   padding-top: 50px;
   padding-bottom: 20px;
-  background-color: #e5c14c;
+  background-color: #E6DEDC;
   color: #5c1020;
   font-family: Pacifico, Helvetica, sans-serif; }
 
