--- a/css/main.sass
+++ b/css/main.sass
@@ -3,13 +3,14 @@
  * ==========================================================================
 
 $background: #e5c14c
+$eggshell: #E6DEDC
 $main-color: #5c1020
 $font-group: Pacifico, Helvetica, sans-serif
 
 body
   padding-top: 50px
   padding-bottom: 20px
-  background-color: $background
+  background-color: $eggshell
   color: $main-color
   font-family: $font-group
   
